--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
-  "name": "friendly-wage",
+  "name": "friendly-wager",
   "version": "0.1.0",
+  "main": "truffle-config.js",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "formik": "^1.5.8",
+    "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "truffle": "5.0.2",
+    "truffle-contract": "3.0.6",
+    "web3": "1.0.0-beta.46"
   },
   "scripts": {
     "start": "react-scripts start",
